
**See [Github](https://github.com/quicksilver/Quicksilver/releases/) for latest release notes**

## Changes - 2.4.3 (4042) ##

### Changed ###

* Remove use of multiple private API that could no longer be maintained
  * Unfortunately this breaks Quicksilver's "pretty" animations for now
* Fix a few more `QSProcessMonitor` crashes by using the threadsafe dict in more places
* Simplify locks in `QSThreadSafeMutableDictionary` by switching to `@synchronized`

## Changes - 2.4.2 (4041) ##

### Fixed ###

* Force-disable superfluous visual effects on startup if running MacOS 14
* Fix a few (of the many) crashes related to `QSProcessMonitor`

## Changes - 2.4.1 (4040) ##

*Requires macOS 10.14+*

### New ###

* Shortcuts.app Plugin to view and run Shortcuts from within Quicksilver
* Better support for managing running applications and processes from within Quicksilver (#2919)
* New translations for Dutch, Japanese, French, Portuguese (Brazil), Spanish
* Improvements to the Calendar & Reminders plugin - allow setting the default calendar for events & reminders from the preferences.

### Fixed ###

* Incorrect icon sizes in Trigger preference panel (#2940)
* Some icons display incorrectly on macOS 12+
* Occasional inconsistent behavior when → into synonyms (#2913)
* Set the correct name for non-bundle processes
* The incorrect object could be selected in the 3rd pane if more than one object with the same name existed.

## Changes - 2.4.0 (4039) ##

*Requires macOS 10.14+*

### New ###

* Execute triggers from the Quicksilver interface! Can't remember the keyboard shortcut for a trigger or have to many triggers? Starting with Quicksilver 2.4.0, you can now give triggers a unique name and add them to your Quicksilver catalog. Run your custom commands right from within Quicksilver!
* Super-charged 'combined' objects. Allow combined text objects to be pasted to the clipboard, improved icons for combined objects and more.