@@ -35,14 +35,12 @@ jobs:
         working-directory: Quicksilver
         run: |
           ./Tools/qsrelease
-          cp ./SharedSupport/ChangesBare.html /tmp
       - name: Prepare DMG_INGREDIENTS artifact
         working-directory: /tmp/QS/build/Release/
         run: |
           cp \
             /tmp/qs_build_settings \
             /tmp/Quicksilver.entitlements \
-            /tmp/ChangesBare.html \
             ./dmg/
           tar -czvf ./dmg_ingredients.tar.gz ./dmg
       - name: Upload components for sign action
@@ -78,7 +76,6 @@ jobs:
           mv \
             ./dmg/qs_build_settings \
             ./dmg/Quicksilver.entitlements \
-            ./dmg/ChangesBare.html \
             /tmp/
           QS_INFO_VERSION=$(awk '/QS_INFO_VERSION/ { print $NF }' \
             /tmp/qs_build_settings)
