@@ -24,7 +24,7 @@
 #define kBugsURL                @"https://github.com/quicksilver/Quicksilver/issues"
 #define kWebSiteURL             @"https://qsapp.com/"
 #define kDonatePageURL			@"https://qsapp.com/donate.php"
-#define kChangelogURL           @"https://qsapp.com/changelog.php"
+#define kChangelogURL           @"https://github.com/quicksilver/Quicksilver/releases/"
 #define kHelpURL                @"https://qsapp.com/manual/"
 #define kHelpSearchURL          @"https://qsapp.com/w/index.php?title=Special:Search&search=%@&go=Go"
 // URL to crash reporter server/script
