@@ -1,5 +1,6 @@
 
-**See [Github](https://github.com/quicksilver/Quicksilver/releases/) for latest release notes**
+**See [Github](https://github.com/quicksilver/Quicksilver/releases/) for latest release notes.**
+**This file is no longer updated.**
 
 ## Changes - 2.4.3 (4042) ##
 
